--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.7.2",
     "@types/react": "^16.9.11",
     "@types/react-dom": "^16.9.4",
     "babel-cli": "^6.26.0",
