--- a/package.json
+++ b/package.json
@@ -6,12 +6,14 @@
   "dependencies": {
     "@material-ui/core": "^4.7.2",
     "@material-ui/icons": "^4.5.1",
+    "@primer/octicons-react": "^9.3.1",
     "@types/react": "^16.9.11",
     "@types/react-dom": "^16.9.4",
     "babel-cli": "^6.26.0",
     "babel-preset-react-app": "^9.0.2",
     "bootstrap": "^4.4.0",
     "file-saver": "^2.0.2",
+    "purecss": "^1.0.1",
     "react": "^16.11.0",
     "react-ace": "^8.0.0",
     "react-bootstrap": "^1.0.0-beta.15",
