--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-quill": "^1.3.3",
     "react-scripts": "^3.3.0",
     "react-split-pane": "^0.1.89",
+    "react-tiny-popover": "^4.0.0",
     "uuid": "^3.3.3"
   },
   "scripts": {
