--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@primer/octicons": "^9.3.1",
     "@primer/octicons-react": "^9.3.1",
     "@types/react": "^16.9.11",
     "@types/react-dom": "^16.9.4",
