--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "purecss": "^1.0.1",
     "react": "^16.11.0",
     "react-contexify": "^4.1.1",
+    "react-contextmenu": "^2.13.0",
     "react-dom": "^16.11.0",
     "react-hotkeys": "^2.0.0",
     "react-quill": "^1.3.3",
