--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "jest": "^24.9.0",
     "node-sass": "^4.13.0",
     "postcss-loader": "^3.0.0",
+    "resize-observer-polyfill": "^1.5.1",
     "sass-loader": "^8.0.0",
     "source-map-loader": "^0.2.4",
     "svg-inline-loader": "^0.8.0",
