--- a/package.json
+++ b/package.json
@@ -56,9 +56,9 @@
     "babel-loader": "^8.0.6",
     "css-loader": "^1.0.1",
     "jest": "^24.9.0",
-    "node-sass": "^4.13.0",
     "postcss-loader": "^3.0.0",
     "resize-observer-polyfill": "^1.5.1",
+    "sass": "^1.58.3",
     "sass-loader": "^8.0.0",
     "source-map-loader": "^0.2.4",
     "svg-inline-loader": "^0.8.0",
